--- a/t/ti/tis/tiseagles.com.html
+++ b/t/ti/tis/tiseagles.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tiseagles.com privacy policy that was archived on 2009-05-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090510233339id_/http%3A//www.tiseagles.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tiseagles.com privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102045912id_/http%3A//www.tiseagles.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 		<title>Tianjin International School - Privacy Policy</title>
@@ -63,8 +63,8 @@
 <div class="wrapper">
 	<div class="header">
 				<div class="subquote">
-			<div class="quote">“I can never say which is my favorite teacher, because they've all been so good!”</div>
-			<div class="name">— TIS 4th Grade Student</div>
+			<div class="quote">“Academically, you have prepared me well for college.”</div>
+			<div class="name">— TIS Alumni</div>
 		</div>
 		<img src="http://www.tiseagles.com/images/corners/gray/bl.png" alt="bl corner" class="bl">
 		<img src="http://www.tiseagles.com/images/corners/gray/br.png" alt="br corner" class="br">
@@ -76,7 +76,7 @@
 		<img src="http://www.tiseagles.com/images/corners/gray/tr.png" alt="tr corner" class="tr">
 					<img src="http://www.tiseagles.com/images/corners/gray/bl.png" alt="bl corner" class="bl">
 			<img src="http://www.tiseagles.com/images/corners/gray/br.png" alt="br corner" class="br">
-		<li>			<a href="http://www.tiseagles.com/index.php">Home</a></li><li>			<a href="http://www.tiseagles.com/about/">About Us</a></li><li>			<a href="http://www.tiseagles.com/admissions/">Admissions</a></li><li>			<a href="http://www.tiseagles.com/staff.php">Staff</a></li><li>			<a href="http://www.tiseagles.com/academics/">Academics</a></li><li>			<a href="http://www.tiseagles.com/extracurricular.php">Extracurricular</a></li><li>			<a href="http://www.tiseagles.com/gallery.php">Gallery</a></li><li>			<a href="http://www.tiseagles.com/contact.php">Contact Us</a></li>
+		<li>			<a href="http://www.tiseagles.com/index.php">Home</a></li><li>			<a href="http://www.tiseagles.com/about/">About Us</a></li><li>			<a href="http://www.tiseagles.com/admissions/">Admissions</a></li><li>			<a href="http://www.tiseagles.com/staff.php">Staff</a></li><li>			<a href="http://www.tiseagles.com/academics/">Academics</a></li><li>			<a href="http://www.tiseagles.com/extracurricular.php">Extracurricular</a></li><li>			<a href="http://www.tiseagles.com/contact.php">Contact Us</a></li>
 		<!--li class="last"><a href="http://www.teachwithisc.com/" target="_blank">International Schools of China</a></li-->
 	</ul>
 	
