--- a/h/hi/hig/high-logic.com.html
+++ b/h/hi/hig/high-logic.com.html
@@ -1,17 +1,18 @@
-<!--The following is the downloaded HTML source of the high-logic.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618141013id_/http%3A//www.high-logic.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the high-logic.com privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102103121id_/http%3A//www.high-logic.com/privacypolicy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta http-equiv="Content-Language" content="en-US">
-<link rel="icon" href="http://www.high-logic.com/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="http://www.high-logic.com/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" rev="stylesheet" href="/screen.css" type="text/css" media="screen" charset="utf-8">
-<link rel="stylesheet" rev="stylesheet" href="/print.css" type="text/css" media="print" charset="utf-8">
-<title>High-Logic Typography Software - Privacy Policy</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+  <title>High-Logic - Privacy Policy</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Language" content="en-US">
+  <link rel="icon" href="http://www.high-logic.com/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="http://www.high-logic.com/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" rev="stylesheet" href="/screen.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" rev="stylesheet" href="/print.css" type="text/css" media="print" charset="utf-8">
 </head>
 <body>
 <div id="super-body">
+
   <div id="content">
     <table summary="content" border="0" cellpadding="0" cellspacing="0" width="100%">
       <tbody>
@@ -19,44 +20,49 @@
           <td style="width: 100%; vertical-align: top; background-color: rgb(240, 240, 240);"> <table summary="content left" border="0" cellpadding="8" cellspacing="0">
               <tbody>
                 <tr>
-                  <td> <h6><a href="/index.html">Home</a><img src="/images/arrowlr.gif" alt="arrow" align="middle">Privacy Policy</h6><h6><img src="/images/lines.gif" alt="" class="line"></h6>
+                  <td><h6><a href="/index.html">Home</a> <img src="/images/arrowlr2.gif" alt="arrow" style="vertical-align: top;"> Privacy Policy</h6><h6><img src="/images/lines.gif" alt="" class="line"></h6>
                    <h1>Privacy Policy</h1>
-                    <h4>Updated: Tuesday, August 3, 2004</h4>
+
+                    <h4>Updated: Thursday, July 23, 2009</h4>
                     <h4>&nbsp;</h4>
                     <h3>Philosophy</h3>
                     <h2>We are only interested in collecting and retaining the information that is necessary to effectively run our business. We respect your right to keep your personal information private.</h2>
                     <h3>IP Addresses &amp; Cookies</h3>
-                    <h2>High-Logic uses IP addresses for statistical and system administration purposes. IP addresses are anonymously logged to track a users session. We do not link IP addresses with personally identifiable information. This means that a users session will be logged but that user will remain anonymous to us.</h2>
+                    <h2>High-Logic uses IP addresses and cookies for statistical and system administration purposes.</h2>
                     <h2>Our Forum uses cookies to keep track of registered members preferences and to provide you with information on posts since your last visit. We do not use this information to track your individual behavior.</h2>
                     <h3>Forum Participation</h3>
                     <h2>Please note that information you place in your "profile" on the Forum can be viewed by the general public. If you do not wish to make your email address or personal information public, you can still register for the Forum. You should omit any personal information from the "profile" that you don't want seen by the general public.</h2>
                     <h2>By participating in the Forum, you agree that we may reproduce any of your contributions elsewhere on the website or in our newsletters. However, we will only publish the information that you make public.</h2>
                     <h3>E-mail</h3>
                     <h2>We will not sell your e-mail address, nor do we provide it to advertisers or mass marketers. In other words, you will never receive junk mail based on information you submit directly to us.</h2>
+
                     <h3>Newsletter (opt-in mailing list) </h3>
                     <h2>Information gathered from e-newsletter subscriptions is used to provide you with the e-mails you have requested and to allow us to customize future e-mail and e-newsletter offerings. You may remove yourself from our electronic mailing lists by following the directions included in each e-mail or at <a href="/newsletter.html">this page</a>.</h2>
+
                     <h3>Ordering</h3>
-                    <h2>In our own customer database we store only your name, e-mail address and order details, but not your address and phone number. All our online orders are encrypted and secured and processed by Kagi and RegNow so we never receive your credit card information. See <a href="http://www.kagi.com/purchase/purchase_privacy.html">Kagi's privacy page</a> and <a href="http://www.regnow.com/privacy.html">RegNow's privacy page</a> for more information. </h2>
+                    <h2>In our own customer database we store your name, e-mail address, order details, as well as your address. All our online orders are encrypted, secured, and processed by our online payment procesor so we never receive your credit card information.</h2>
+
                     <h3>Outside Links</h3>
                     <h2>This website provides links to websites outside of High-Logic. High-Logic is not responsible for the content, products, services or privacy policies of these websites.</h2>
                     <h3>Copyright</h3>
                     <h2>All documents, information and logos included on this website are copyright High-Logic 1997-2009, except where noted otherwise.</h2>
                     <h2>You may access, download and print materials on this web site for your personal and non-commercial use. You may not modify, copy, distribute, transmit, display, perform, reproduce, publish, license, create derivative works from, transfer, or sell any information, software, products or services obtained from this web site. Furthermore, you may not use the materials found on this web site on any other web sites or in a networked environment without written permission by High-Logic.</h2>                    <h3>Terms of Use</h3>
+
                     <h2>All advice provided on this website is for general informational purposes only. High-Logic is not responsible for any losses that may occur as a result of following this advice.</h2>
                     <h3>Privacy Policy Changes</h3>
                     <h2>If we decide to change our privacy policy commitment, we will post changes here. We reserve the right to change our privacy policy without notice.</h2>
                   <h4>Please feel free to <a href="/contact.html">contact us</a> with any questions you may have about this privacy policy.</h4></td>
                 </tr>
+
               </tbody>
             </table></td>
         </tr>
       </tbody>
     </table>
-    <div id="footer" class="menu" align="center"><img src="/images/line.gif" alt="">
+
+    <div id="footer" class="footermenu"><img src="/images/line.gif" alt="">
       <div id="footer-menu">
-        <center>
-          <a href="/index.html">Home</a> | <a href="/products.html">Products</a> | <a href="/download.html">Downloads</a> | <a href="/register.html">Buy</a> | <a href="/support.html">Support</a> | <a href="http://forum.high-logic.com/">Forum</a> | <a href="/contact.html">Contact Us</a>
-        </center>
+        <a href="/index.html">Home</a> | <a href="/products.html">Products</a> | <a href="/download.html">Download</a> | <a href="/register.html">Buy</a> | <a href="/support.html">Support</a> | <a href="http://forum.high-logic.com/">Forum</a> | <a href="/press.html">Press</a> | <a href="/contact.html">Contact</a>
       </div>
       <!-- Begin Footer -->
       <div id="footer-copyright"><a href="/privacypolicy.html">Privacy Policy</a> | <a href="/sitemap.html">Site Map</a> | Copyright © 1997-2009 High-Logic B.V.</div>
@@ -66,32 +72,80 @@
   <!-- Begin Header -->
   <div id="header">
     <div id="logo"><a href="http://www.high-logic.com" class="noHover"><img src="/images/high-logic.gif" alt="High-Logic - Home" style="border: 0px solid;"></a></div>
-      <div id="nav-bar">
-        <table summary="menu" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
-          <tbody>
-            <tr>
-              <td class="menu" align="center" width="100"><a href="/index.html">Home</a></td>
-              <td class="vbar" align="center" width="10">|</td>
-              <td class="menu" align="center" width="100"><a href="/products.html">Products</a></td>
-              <td class="vbar" align="center" width="10">|</td>
-              <td class="menu" align="center" width="100"><a href="/download.html">Downloads</a></td>
-              <td class="vbar" align="center" width="10">|</td>
-              <td class="menu" align="center" width="100"><a href="/register.html">Buy</a></td>
-              <td class="vbar" align="center" width="10">|</td>
-              <td class="menu" align="center" width="100"><a href="/support.html">Support</a></td>
-              <td class="vbar" align="center" width="10">|</td>
-              <td class="menu" align="center" width="100"><a href="http://forum.high-logic.com/">Forum</a></td>
-              <td class="vbar" align="center" width="10">|</td>
-              <td class="menu" align="center" width="100"><a href="/press.html">Press</a></td>
-              <td class="vbar" align="center" width="10">|</td>
-              <td class="menu" align="center" width="100"><a href="/contact.html">Contact Us</a></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+
+<div class="menu">
+
+<ul>
+	<li><a href="/">Home</a>
+	</li>
+</ul>
+
+<ul>
+	<li><a href="/products.html">Products<!--[if gt IE 6]><!--></a><!--<![endif]--><!--[if lt IE 7]><table border="0" cellpadding="0" cellspacing="0"><tr><td><![endif]-->
+		<ul class="skinny">
+			<li><a href="/fontcreator.html"><span>FontCreator</span></a></li>
+			<li><a href="/maintype.html"><span>MainType</span></a></li>
+			<li><a href="/scanahand.html"><span>Scanahand</span></a></li>
+		</ul>
+	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+	</li>
+</ul>
+
+<ul>
+	<li><a href="/download.html">Download</a>
+	</li>
+</ul>
+
+<ul>
+	<li><a href="/register.html">Buy<!--[if gt IE 6]><!--></a><!--<![endif]--><!--[if lt IE 7]><table border="0" cellpadding="0" cellspacing="0"><tr><td><![endif]-->
+		<ul>
+			<li><a href="/register.html"><span>Buy New Licenses</span></a></li>
+			<li><a href="/register.html?show=upgrades"><span>Buy Upgrades</span></a></li>
+		</ul>
+	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+	</li>
+</ul>
+
+<ul>
+	<li><a href="/support.html">Support<!--[if gt IE 6]><!--></a><!--<![endif]--><!--[if lt IE 7]><table border="0" cellpadding="0" cellspacing="0"><tr><td><![endif]-->
+		<ul class="biggy">
+      <li><a href="/fontcreator/faq.html"><span>FontCreator FAQ</span></a></li>
+      <li><a href="/fontcreator/tutorials.html"><span>FontCreator Tutorials</span></a></li>
+      <li><a href="/maintype/faq.html"><span>MainType FAQ</span></a></li>
+      <li><a href="/maintype/tutorials.html"><span>MainType Tutorials</span></a></li>
+      <li><a href="/scanahand/faq.html"><span>Scanahand FAQ</span></a></li>
+      <li><a href="/scanahand/tutorials.html"><span>Scanahand Tutorials</span></a></li>
+		</ul>
+	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+	</li>
+</ul>
+
+<ul>
+	<li><a href="http://forum.high-logic.com/">Forum</a>
+	</li>
+</ul>
+<ul>
+	<li><a href="/about.html">Company<!--[if gt IE 6]><!--></a><!--<![endif]--><!--[if lt IE 7]><table border="0" cellpadding="0" cellspacing="0"><tr><td><![endif]-->
+		<ul>
+			<li><a href="/news.html"><span>News</span></a></li>
+			<li><a href="/about.html"><span>About High-Logic</span></a></li>
+			<li><a href="/press.html"><span>Press Kit</span></a></li>
+			<li><a href="/contact.html"><span>Contact Us</span></a></li>
+		</ul>
+	<!--[if lte IE 6]></td></tr></table></a><![endif]-->
+	</li>
+</ul>
+
+<ul>
+	<li><a href="/contact.html">Contact</a>
+	</li>
+</ul>
+
+</div>
+
   </div>
   <!-- End Header -->
+  </div>
 <!-- Begin Tracking -->
 <!-- Begin Nedstat Basic code -->
 <script type="text/javascript">
@@ -102,10 +156,11 @@ if(verIE>0)ver=verIE;else ver=parseInt(ver);var u="http://m1.nedstatbasic.net/n?
 // -->
 </script><a target="_blank" href="http://v1.nedstatbasic.net/stats?AAmJQAM2mtGUbeEOqkS9QFo8H41g"><img src="http://m1.nedstatbasic.net/n?id=AAmJQAM2mtGUbeEOqkS9QFo8H41g&amp;p=0&amp;w=800&amp;c=24" border="0" width="1" height="1" alt="Nedstat web site statistics"></a>
 <noscript>
-<a target="_blank"
+<p>
+<a 
 href="http://v1.nedstatbasic.net/stats?AAmJQAM2mtGUbeEOqkS9QFo8H41g"><img
 src="http://m1.nedstatbasic.net/n?id=AAmJQAM2mtGUbeEOqkS9QFo8H41g"
-border="0" width="1" height="1" alt="" /></a>
+width="1" height="1" alt="" style="border:none;" /></a></p>
 </noscript><!-- End Nedstat Basic code -->
 <!-- Begin Google Analytics code -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -115,6 +170,5 @@ _uacct = "UA-229802-1";
 urchinTracker();
 </script>
 <!-- End Tracking -->
-
 
 </body></html>
