--- a/i/ic/icr/icruise.com.html
+++ b/i/ic/icr/icruise.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the icruise.com privacy policy that was archived on 2009-04-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090424080537id_/http%3A//www.icruise.com/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the icruise.com privacy policy that was archived on 2009-11-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091102141414id_/http%3A//www.icruise.com/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy - iCruise.com</title>
@@ -690,7 +690,7 @@ expectations.™</i></p>
 	
 			<div align="center"><a href="http://www.seflorida.bbb.org/BusinessReport.aspx?CompanyID=30006676" target="_blank"><img border="0" src="/imgs/client/logos/ftr/logo_bbbo.gif" alt="Better Business Bureau Online Reliability Program" width="110" height="40"></a><br></div>
 			<br>
-			<div class="subfooter">Fla. Seller of Travel Reg. No. ST35780<br>Copyright ©2009, <a class="subfooter" style="text-decoration : none;" href="http://www.icruise.com/index.asp">iCruise.com</a> / WMPH Incorporated<br><br><a class="subfooter" href="http://www.icruise.com/sitemap.asp">Site Map</a> | <a class="subfooter" href="http://www.icruise.com/termsandconditions.asp">Terms &amp; Conditions</a> | <a class="subfooter" href="http://www.icruise.com/privacypolicy.asp">Privacy Policy</a> | <a class="subfooter" href="http://www.icruise.com/about_us.asp">About Us</a> | <a class="subfooter" href="http://www.icruise.com/credentials.asp">Credentials</a> | <a class="subfooter" href="http://www.icruise.com/contact_us.asp">Contact Us</a><br></div>
+			<div class="subfooter">Fla. Seller of Travel Reg. No. ST35780<br>Copyright ©2009, <a class="subfooter" style="text-decoration : none;" href="http://www.icruise.com/index.asp">iCruise.com®</a> / WMPH Incorporated<br><br><a class="subfooter" href="http://www.icruise.com/sitemap.asp">Site Map</a> | <a class="subfooter" href="http://www.icruise.com/termsandconditions.asp">Terms &amp; Conditions</a> | <a class="subfooter" href="http://www.icruise.com/privacypolicy.asp">Privacy Policy</a> | <a class="subfooter" href="http://www.icruise.com/about_us.asp">About Us</a> | <a class="subfooter" href="http://www.icruise.com/credentials.asp">Credentials</a> | <a class="subfooter" href="http://www.icruise.com/contact_us.asp">Contact Us</a><br></div>
 		</div></td>
 	</tr>
 	</tbody></table><p>
