--- a/a/al/all/alldatasheet.net.html
+++ b/a/al/all/alldatasheet.net.html
@@ -1,130 +1,145 @@
-<!--The following is the downloaded HTML source of the alldatasheet.net privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619062004id_/http%3A//www.alldatasheet.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alldatasheet.net privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103023137id_/http%3A//www.alldatasheet.net/bottom_bar/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>::: ALLDATASHEET - Datasheet search site for Electronic Components and Semiconductors, integrated circuits, diodes, triacs, and other semiconductors. </title>
-<meta name="author" content="alldatasheet.com">
+<title>ALLDATASHEET.NET - Datasheet search site for Electronic Components and 
+Semiconductors, integrated circuits, diodes, triacs, and other semiconductors. </title>
+<meta name="author" content="alldatasheet.net">
 <meta name="description" content="alldatasheet, datasheet, Datasheet search site for Electronic Components and Semiconductors, integrated circuits, diodes, triacs, and other semiconductors. ">
-<meta name="keywords" content="Semiconductors, datasheets, electronic components, parts, obsolete, documentation, pinouts, integrated circuits, manufacturer, technical, info, cross reference, chip, application notes, selection guide,
-electornic part, electric part, semiconductor,electronic components, ic, chip, tr, diode, capacitor, relay, switch, connector,
-resistors">
-<link rel="stylesheet" href="http://www.alldatasheet.com/img/main.css" type="text/css">
-
+<meta name="keywords" content="Semiconductors, datasheets, electronic components, parts, obsolete, documentation, pinouts, integrated circuits, manufacturer, electornic part, electric part, semiconductor,semiconductors, componets, transistor, electronic components, ic, chip, tr, diode, capacitor, relay, switch, connector, resistors, condensor, transformer, inductor, module, optocoupler, led, lamps, sensor">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<link rel="SHORTCUT ICON" href="/favicon.ico">
+<link rel="stylesheet" href="http://alldatasheet.net/img/main.css" type="text/css">
+<script src="/js/dataseek.js"></script>
+</head>
+<body topmargin="0" leftmargin="0" marginwidth="0" marginheight="0" bgcolor="#ffffff">
 <script language="javascript">
 function addbookmark(){
 if ((navigator.appVersion.indexOf("MSIE") > 0)&&(parseInt(navigator.appVersion)>= 4)) 
-	if(document.all)window.external.AddFavorite("http://www.alldatasheet.com","AllDatasheets.com - Electronic Component Research Database")}
+	if(document.all)window.external.AddFavorite("http://www.alldatasheet.net","Alldatasheet.net - Electronic Component's Datasheet Search Site")}
 </script>
-
-</head>
-
-<body topmargin="0" leftmargin="0">
 <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#336699" align="center">
 <tbody><tr>
 <td valign="middle" class="nv_top">
-<a href="/">
-<img border="0" src="http://images.alldatasheet.com/logo2/title_net.gif" width="335" height="49"><br>
-Datasheet Search System</a> <a href="javascript:addbookmark()"><img src="http://images.alldatasheet.com/img/bookmark.gif" border="0"></a><br>
+<a href="/"><img border="0" src="http://banner.alldatasheet.com/alldatasheet_logo/title_net.gif" width="328" height="52"><br>
+Electronic Component's Datasheet Search Site</a> <a href="javascript:addbookmark()"><img src="http://other.alldatasheet.com/etc/bookmark.gif" border="0"></a><br>
 Mirror site :&nbsp;
 <a href="http://www.alldatasheet.com">alldatasheet.com</a>
-,&nbsp; <a href="http://www.alldatasheet.co.kr/">
-alldatasheet.co.kr</a>
-,&nbsp; <a href="http://cn.alldatasheet.com/">
+,&nbsp; <a href="http://www.alldatasheet.co.kr/">alldatasheet.co.kr</a>,&nbsp; <a href="http://cn.alldatasheet.com/">
 cn.alldatasheet.com</a>,&nbsp; <a href="http://www.alldatasheet.jp/">
-alldatasheet.jp</a>&nbsp;&nbsp;
-<br>Componets, Electronics Parts, Semiconductors, integrated circuits, diodes, triacs, and other semiconductors informations
-</td>
+alldatasheet.jp</a>,&nbsp; <a href="http://www.alldatasheet.es/">
+alldatasheet.es</a>,&nbsp; <a href="http://www.alldatasheet.fr/">
+alldatasheet.fr</a>
+<br>Electronic Components, Parts, Semiconductors, Diode, Triac, LED, Capacitor, Connector, LCD, Relay, Transistor, 
+other information</td>
 </tr>
 <tr>
 <td height="7"></td>
 </tr>
-</tbody></table>  
-        <p>
-<b>
-</b></p><center><b>
-　<p>
-<font face="Verdana" color="#cc0000" size="5">Privacy Policy</font><u><font size="4"><br>
-　</font></u></p>
-<table height="1" cellspacing="0" cellpadding="0" width="732" border="0">
-  <tbody><tr>
-    <td valign="bottom" width="706" height="45"><b>
-    <p align="left"><font face="Verdana" size="2">Thank you for visiting Alldatasheet.com<br><br>
-
-Alldatasheet.com  is committed to protecting your privacy. This policy explains how we handle information we learn about you while you visit our site. The information that we receive depends on what you do during your visit, and what service(s) you request</font></p>
-
-    <p align="left"><font face="Verdana">Data Collected</font><font size="2" face="Verdana"><br>
-We collect two types of information: personal and demographic. 
-Personal information is any information that you choose to submit to us and that is specific to your identification (i.e. name, address, phone number, email).
-Demographic information is information that cannot be associated with you personally (i.e. domain information, zip codes, areas of interest). 
-We also keep track of your browsing patterns.
-<br>
-Also, we use third-party advertising companies to serve ads when you visit our website. These companies may use information
- (not including your name, address, email address, or telephone number) about your visits to this and other websites in order to provide advertisements about
-  goods and services of interest to you.
- </font>
-</p>
-    <b>
-    </b><p align="left"><b><font size="2" face="Verdana">
-    </font></b>
-    <b>
-    <font face="Verdana">IP address</font><font size="2" face="Verdana"><br>
-    An IP Address is a number used by computers on a network to identify your 
-	computer so that data can be transmitted to you. We collect IP Address 
-	information in order to administer Alldatasheet.com and to gather broad 
-	demographic information.</font></b></p><b>
-	
-    <font face="Verdana">Cookies</font><font size="2" face="Verdana"><br>
-Cookies are pieces of data that a web site sends to a user’s computer while the user is viewing the site.<br>
-Google, as a third party vendor, uses cookies to serve ads on our site.<br>
-Google's use of the DART cookie enables it to serve ads to our users based on their visit to our sites and other sites on the Internet. <br>
-Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.com/privacy_ads.html" target="_blank">Google ad and content network privacy policy.</a>
-</font><p></p>	<br>
-
-    <font face="Verdana">Questions/Concerns</font><font size="2" face="Verdana"><br>
-If, after reading our Privacy Policy, you have questions or concerns about any of the statements herein, we welcome your feedback. </font><p></p>	
-	
-    <p align="left"><font face="Verdana">Contact Us</font><font size="2" face="Verdana"><br>
-    If you have any questions , please send E-mail to <a style="color: #ff0000; text-decoration: none" href="mailto:master@alldatasheet.com">
-    master@alldatasheet.com</a>. 
-	We awaiting for your contact.</font></p>
-    </b><p align="right"><b><font face="Verdana" size="2">
-    </font></b></p></b></td>
-  </tr>
-  <tr>
-    <td valign="center" width="706" height="77"><font size="2">
-    <hr align="center">
-    </font><font size="1">
-    </font></td>
-  </tr>
 </tbody></table>
-<p>　</p>
-<p>　</p>
-</b>
+<script src="http://www.alldatasheet.net/js/dataseek.js"></script>
+<center><table border="0" cellpadding="0" cellspacing="0" width="100%" align="center" class="main" bgcolor="#eeeeee">
+<form name="frmSearch" method="post" action="/view.jsp" onsubmit="return InputCheck(frmSearch,1)"></form>
+<tbody><tr><td align="right" height="50" width="50%">
+<font color="#2E3192" size="2"><b>Part Name</b></font> 
+<select name="sField"><option value="1">Included</option><option value="2">start 
+with</option><option value="3">end</option><option value="4" selected="">match</option></select>
+<input size="18" name="sSearchword" value=""><input type="hidden" name="adcnt" value="2"> <input type="hidden" name="seekcls" value=""><input type="submit" value="Search">&nbsp;&nbsp; 
+&nbsp;</td>
+
+<form name="frmSearchd" method="post" action="http://category.alldatasheet.com/index.jsp" onsubmit="return InputCheck(frmSearchd)"></form>
+<td width="50%">&nbsp;&nbsp;&nbsp; <font color="#2E3192" size="2"><b>Description</b></font>
+<input size="25" name="sSearchword" value=""> <input type="hidden" name="adcnt" value="2"><input type="hidden" name="seekcls" value=""><input type="submit" value="Search">
+</td>
+</tr></tbody></table></center>
 
 
-<script language="javascript">
-function addbookmark(){
-if ((navigator.appVersion.indexOf("MSIE") > 0)&&(parseInt(navigator.appVersion)>= 4)) 
-	if(document.all)window.external.AddFavorite("http://www.alldatasheet.com","Alldatasheet.com - Electronic Component Research Database")}
-</script>
-<table border="0" cellpadding="0" cellspacing="0" width="100%" class="main" bgcolor="#336699" align="center">
-  <tbody><tr>
-    <td align="center" class="nv_white"><br>All Rights Reserved©
-    
-    <a target="_top" href="http://www.alldatasheet.net/">Alldatasheet.net</a> 2003 - 2009  &nbsp;&nbsp;<a href="http://www.alldatasheet.com/advertisement.jsp">Advertisement</a>&nbsp;&nbsp;<a href="mailto:master@alldatasheet.com">Contact 
-    us</a>&nbsp;  
-    <a target="_top" href="http://www.alldatasheet.net/privacy.html">
-    Privacy Policy</a>&nbsp;
-    <a href="javascript:addbookmark()">Bookmark</a>&nbsp;&nbsp;
-       <a href="http://www.alldatasheet.com/link.html">Link Exchange</a>&nbsp;
-    <a href="http://www.alldatasheet.com/link7.html">Site 
-    link</a>&nbsp;
-    <a href="http://www.alldatasheet.com/new/2008/july/01.html">New Datasheets</a>
-&nbsp;
-    <a href="http://www.alldatasheet.com/manufacturer/index.jsp">Manufacturer</a>
+
+
+<br>
+<table cellpadding="0" cellspacing="5" border="0" width="95%" align="center">
+<tbody><tr><td><table cellpadding="5" cellspacing="1" border="0" bgcolor="#336699">
+<tbody><tr><td bgcolor="#eeeeee" style="font-size:11pt;color:#336699;" align="center"><b>* Alldatasheet.net is Alldatasheet.com's Mirror Site.</b></td></tr>
+</tbody></table></td></tr>
+</tbody></table>
+
+<table width="95%" border="0" cellspacing="5" cellpadding="5" align="center">
+<tbody><tr>
+	<td valign="top">
+		<h2 style="color:#336699;margin-bottom:0;">Privacy Policy</h2>
+		<hr color="#e6e6e6">
+		<p class="t4" style="line-height:180%">Thank you for visiting 
+		Alldatasheet.net<br><br>
+
+		Alldatasheet.net is committed to protecting your privacy. This policy 
+		explains how we handle information we learn about you while you visit 
+		our site. The information that we receive depends on what you do during 
+		your visit, and what service(s) you request
+   		<br><br><b>Data Collected</b><br>
+		We collect two types of information: personal and demographic. Personal 
+		information is any information that you choose to submit to us and that 
+		is specific to your identification (i.e. name, address, phone number, 
+		email). Demographic information is information that cannot be associated 
+		with you personally (i.e. domain information, zip codes, areas of 
+		interest). We also keep track of your browsing patterns.
+<br>
+		Also, we use third-party advertising companies to serve ads when you 
+		visit our website. These companies may use information (not including 
+		your name, address, email address, or telephone number) about your 
+		visits to this and other websites in order to provide advertisements 
+		about goods and services of interest to you.
+<br><br><b> IP address</b><br>
+    	An IP Address is a number used by computers on a network to identify 
+		your computer so that data can be transmitted to you. We collect IP 
+		Address information in order to administer Alldatasheet.net and to 
+		gather broad demographic information.
+	
+    <br><br><b>Cookies</b><br>
+		Cookies are pieces of data that a web site sends to a user’s computer 
+		while the user is viewing the site.<br>
+		Google, as a third party vendor, uses cookies to serve ads on our site.<br>
+		Google's use of the DART cookie enables it to serve ads to our users 
+		based on their visit to our sites and other sites on the Internet. <br>
+		Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.com/privacy_ads.html" target="_blank">
+		Google ad and content network privacy policy.</a>
+<br><br>
+
+    <b>Questions/Concerns</b><br>
+		If, after reading our Privacy Policy, you have questions or concerns 
+		about any of the statements herein, we welcome your feedback.	
+	
+    <br><br><b>Contact Us</b><br>
+    	If you have any questions , please send E-mail to <a href="mailto:benjamin@alldatasheet.com">
+    <font color="#0000ff">benjamin@alldatasheet.com</font></a>. We awaiting for 
+		your contact.</p>
+    <p align="right"><font face="Verdana" size="2">
+    </font>		</p><br></td></tr></tbody></table><br><br>
+
+<table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#336699" align="center">
+  <tbody><tr><td bgcolor="#d0f0ff" align="right" height="35">
+		<font color="#012c61" size="2"><b>Does ALLDATASHEET help your business so far?</b></font>&nbsp; <a href="http://www.alldatasheet.com/donate.jsp"><img src="http://other.alldatasheet.com/etc/paypal_bottom.gif" align="absmiddle" border="0" width="134" height="26"></a>&nbsp;
+	</td>
+</tr>
+<tr>
+    <td align="center" class="nv_white" style="line-height:20px;"><br><a href="about_alldatasheet.html">About Alldatasheet</a>&nbsp; &nbsp;| &nbsp;
+    <a href="advertisement.html">Advertisement</a>&nbsp; &nbsp;| &nbsp; 
+<a href="contactus.html">Contact us</a>&nbsp; &nbsp;| &nbsp;
+ <a target="_top" href="privacy.html">
+    Privacy Policy</a>&nbsp; &nbsp;| &nbsp; 
+    <a href="javascript:addbookmark()">Bookmark</a>&nbsp; &nbsp;| &nbsp;
+    <a href="link.html">Link Exchange</a>&nbsp; &nbsp;| &nbsp;
+    <a href="http://www.alldatasheet.net/manufacturer/a.jsp">Manufacturer List</a><br>All Rights Reserved©
+    <a target="_top" href="http://www.alldatasheet.com">Alldatasheet.com</a> 2003 - 2009  &nbsp; &nbsp;
     <br><br></td>
   </tr>
+    <tr><td align="center" class="nv_white" bgcolor="#215180"> <br><center>Mirror Sites</center>
+  English :   <a href="http://www.alldatasheet.com">Alldatasheet.com</a> &nbsp;, &nbsp;
+   <a href="http://www.alldatasheet.net">Alldatasheet.net</a> &nbsp;, &nbsp;
+  <a href="http://www.alldatasheet.co.kr">Alldatasheet.co.kr</a> &nbsp;| &nbsp;
+  Chinese :  <a href="http://cn.alldatasheet.com">Cn.alldataseet.com</a> &nbsp;| &nbsp;
+  Japanese : <a href="http://www.alldatasheet.jp">Alldatasheet.jp</a> &nbsp;| &nbsp;
+  Spanish : <a href="http://www.alldatasheet.es">Alldatasheet.es</a> &nbsp;| &nbsp;
+  French : <a href="http://www.alldatasheet.fr">Alldatasheet.fr</a> &nbsp; &nbsp;<br><br></td></tr>
 </tbody></table>
 
-
-</center></body></html>
+</body></html>
