--- a/i/in/ind/industrialinterface.com.html
+++ b/i/in/ind/industrialinterface.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the industrialinterface.com privacy policy that was archived on 2009-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090527154131id_/http%3A//www.industrialinterface.com/signup_help/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the industrialinterface.com privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103053321id_/http%3A//industrialinterface.com/signup_help/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/transitional.dtd"><html><head>
 		<title>Privacy Policy | Industrial Interface, Inc.</title>		
