--- a/4/45/45c/45cat.com.html
+++ b/4/45/45c/45cat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 45cat.com privacy policy that was archived on 2009-04-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090425114556id_/http%3A//www.45cat.com/45_privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 45cat.com privacy policy that was archived on 2009-11-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091103065112id_/http%3A//www.45cat.com/45_privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -178,8 +178,7 @@ Our website may contain links to other websites of interest. However, once you h
 <table cellspacing="0" cellpadding="0" width="100%"><tbody><tr><td>
 <span style="font-size: 12px;">
 ©2009 45cat.com&nbsp;&nbsp;:&nbsp;
-<a href="/45_privacy.php">Privacy Policy</a>
-
+<a href="/45_privacy.php">Privacy Policy</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="/45_terms.php">Terms</a>
 </span></td><td align="right" valign="bottom">
 
 </td></tr></tbody></table>
